--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^6.2.6",
     "nodemailer": "^6.7.3",
     "nodemon": "^2.0.15",
-    "redis": "^4.0.4"
+    "redis": "^4.0.4",
+    "request": "^2.88.2"
   }
 }
