--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine
 # Create app directory
 WORKDIR /usr/src/app
 # Install app dependencies
-COPY package*.json .
+COPY package*.json ./
 
 RUN npm ci
 # Copy app source code
