--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,7 +2,7 @@ FROM node:alpine
 WORKDIR /usr/src/app
 
 # dot . represents the WORKDIR
-COPY package*.json .
+COPY package*.json ./
 RUN npm ci
 # we can aslo do npm install but ci is better practice
 COPY . .
