--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,30 +1,19 @@
-upstream api{
-    server server:5000;
-}
-
-upstream client{
-    server frontend:3000;
-}
-
 server{
     listen 80;
+    listen [::]:80;
+
+    root /var/www/html;
+    index index.html index.htm index.nginx-debian.html;
+
+    server_name user-management-nishant.tech www.user-management-nishant.tech;
 
     location / {
-        proxy_pass http://client;
+        proxy_pass http://frontend:3000;
     }
-
-# to enable hot reloading 
-   location /sockjs-node {
-        proxy_pass http://client;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-    }
-
 # when user enter /api in url then request will forward to our backend
-    location / {
+    location /api {
         # suppose user send request to /api/all then we get only "/all" part and delete "/api" part from url
-         rewrite /(.*) /$1 break;
-        proxy_pass http://api;
+        rewrite /api/(.*) /$1 break;
+        proxy_pass http://server:5000;
     }
 }
