--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,7 @@ server{
     root /var/www/html;
     index index.html index.htm index.nginx-debian.html;
 
-    server_name user-management-nishant.tech www.user-management-nishant.tech;
+    server_name 64.227.128.160 user-management-nishant.tech www.64.227.128.160.com www.user-management-nishant.tech;
 
     location / {
         proxy_pass http://frontend:3000;
