--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,13 +2,13 @@ server{
     listen 80;
     listen [::]:80;
 
-    root /var/www/html;
+    root /usr/share/nginx/html;
     index index.html index.htm index.nginx-debian.html;
-
-    server_name 64.227.128.160 user-management-nishant.tech www.64.227.128.160.com www.user-management-nishant.tech;
+    server_name 64.227.128.160 user-management-nishant www.64.227.128.160.com www.user-management-nishant.tech;
 
     location / {
         proxy_pass http://frontend:3000;
+        try_files $uri $uri/ /index.html;
     }
 # when user enter /api in url then request will forward to our backend
     location /api {
