new changes on docker

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,5 @@
 #stage 1
-FROM node:alpine as build
+FROM node:alpine AS builder
 # Create app directory
 WORKDIR /frontend
 # Install app dependencies
@@ -11,8 +11,3 @@ RUN npm run build
 #Expose port and start application
 EXPOSE 3000
 CMD ["npm", "start"]
-#stage 2
-FROM nginx
-COPY --from=build /build /usr/share/nginx/html
-COPY ./default.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
