--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,15 +50,15 @@ services:
     ports:
       - '27017:27017'
   #nginx
-  nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile 
-    ports: 
-      - 80:80
-    depends_on:
-      - server       
-    restart: always
+  # nginx:
+  #   build:
+  #     context: ./nginx
+  #     dockerfile: Dockerfile 
+  #   ports: 
+  #     - 80:80
+  #   depends_on:
+  #     - server       
+  #   restart: always
 
 volumes:
   mongo: {}
