--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,7 +6,13 @@ COPY package*.json .
 
 RUN npm ci
 # Copy app source code
-COPY . .
+COPY . /frontend/
+RUN npm run build
 #Expose port and start application
 EXPOSE 3000
 CMD ["npm", "start"]
+
+#stage 2
+FROM nginx
+COPY --from=builder /frontend/build/ /usr/share/nginx/html
+EXPOSE 80
